Some files updated.

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.svg",
+              "src/favicon2.svg",
               "src/assets",
               "src/manifest.webmanifest",
               "src/CNAME",
